# e-commerce_app

./: .env  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/data/: users.json
api/: categories.py  products.py  shopping.py  users.py
api/utils/: auth.py  users.py
db/: database.py  populate_db.py  products.json
db/models/: category.py  product.py  shopping.py  user.py
pydantic_schema/: category.py  product.py  shopping.py  user.py
tests/: test_main.py
